--- a/Demo/Views/User/GetUsers.cshtml
+++ b/Demo/Views/User/GetUsers.cshtml
@@ -1,26 +1,28 @@
-@model Demo.ViewModels.ResponseVM;
+@model IEnumerable<Demo.Models.User>;
 
 @{
     ViewData["Title"] = "GetUsers";
 }
 
 <h2>Users</h2>
-
-
-<!-- <table class="table">    
+<a asp-action="AddUpdate" class="btn btn-primary" >Add User</a>
+<table class="table table-hover table-striped table-bordered">    
     <thead>    
         <tr>    
             <th>    
-                @Html.DisplayNameFor(model => model.Content.FirstName)    
+                @Html.DisplayNameFor(model => model.FirstName)    
             </th>    
             <th>    
-                @Html.DisplayNameFor(model => model.Content.LastName)    
+                @Html.DisplayNameFor(model => model.LastName)    
             </th> 
+            <th>    
+                @Html.DisplayNameFor(model => model.Email)    
+            </th>
             <th></th>    
         </tr>    
     </thead>    
     <tbody>    
-        @foreach (var item in Model.Content)    
+        @foreach (var item in Model)    
 {    
         
             <tr>
@@ -29,13 +31,40 @@
                 </td>    
                 <td>    
                     @Html.DisplayFor(modelItem => item.LastName)    
-                </td>  
+                </td>
                 <td>    
-                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |    
-                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |    
-                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>    
+                    @Html.DisplayFor(modelItem => item.Email)    
+                </td>
+                <td>    
+                    <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |    
+                    <a asp-action="Details" asp-route-id="@item.UserId">Details</a> |
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                        Delete
+                    </button>    
                 </td>    
             </tr>
         }    
     </tbody>    
-</table> -->
+</table>
+
+<div class="container">
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+          <input type="hidden" value=0 id="deleteRowId" />
+          <h4 class="text-center" id="myModalLabel">Delete record?</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this record?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+        <button type="button" class="btn btn-primary" >Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
